<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!--在这里继承了spring boot -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>


    <description>犀鸟商城</description>

    <groupId>com.toucan.shopping</groupId>
    <artifactId>toucan-shopping</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>


    <properties>
        <java.version>17</java.version>
        <elasticsearch.version>7.8.0</elasticsearch.version>
    </properties>


    <modules>


        <!--  =================================公共模块 =================================-->

        <module>toucan-shopping-modules</module>

        <!--  =================================标准版 =================================-->
        <module>toucan-shopping-standard</module>

        <!--  =================================微服务版 =================================-->
        <module>toucan-shopping-cloud</module>

        <!--  =================================前端模板 =================================-->
        <module>toucan-shopping-front-templates</module>




    </modules>


    <dependencies>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
            <version>1.18.36</version>
        </dependency>

        <!--JSON解析 -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.56</version>
        </dependency>


        <!-- 对象属性拷贝 -->
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.3</version>
        </dependency>


        <!--apache 公共包 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Jakarta 注解 API（@PostConstruct 等） -->
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>


            <!--前端模板 -->
            <dependency>
                <groupId>com.toucan.shopping.front.templates</groupId>
                <artifactId>toucan-shopping-web-templates</artifactId>
                <version>1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>com.toucan.shopping.front.templates</groupId>
                <artifactId>toucan-shopping-admin-templates</artifactId>
                <version>1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>com.toucan.shopping.front.templates</groupId>
                <artifactId>toucan-shopping-admin-auth-web-templates</artifactId>
                <version>1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>com.toucan.shopping.front.templates</groupId>
                <artifactId>toucan-shopping-seller-web-templates</artifactId>
                <version>1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>



</project>